# limabean-harvest

./: .gitattributes  .gitignore  10-features.html  20-installation.html  25-usage.html  30-customisation.html  40-diagnostics-and-logging.html  50-contributing.html  README.md  flake.nix  index.html  intro.html  justfile  limabean.harvest.api.contrib.first-direct-csv.html  limabean.harvest.api.contrib.first-direct.html  limabean.harvest.api.contrib.kiwibank-ofx.html  limabean.harvest.api.contrib.kiwibank-ofx1.html  limabean.harvest.api.html  run-import-tests
.github/workflows/: docs.yml  release.yml  test-suite.yml
clj/: .dir-locals.el  .gitignore  CHANGELOG.md  README.md  build.clj  deps.edn  pom.xml
clj/doc/: 10-features.md  20-installation.md  25-usage.md  30-customisation.md  40-diagnostics-and-logging.md  50-contributing.md  intro.md
clj/src/lima/: cli.clj  main.clj
clj/src/lima/adapter/: beanfile.clj  import.clj  tabulate.clj
clj/src/lima/contrib/import/: firstdirect.clj
clj/src/lima/core/: glob.clj  inventory.clj
clj/src/lima/core/import/: account_inference.clj  import.clj  ofx1.clj
clj/src/lima/harvest/: api.clj  app.clj  cli.clj  main.clj
clj/src/lima/harvest/adapter/: beanfile.clj  config.clj  harvest.clj  import.clj  logging.clj  prepare.clj
clj/src/lima/harvest/api/contrib/: first_direct.clj  kiwibank_ofx1.clj
clj/src/lima/harvest/contrib/: first_direct.clj  firstdirect.clj
clj/src/lima/harvest/core/: account.clj  account_inference.clj  config.clj  correlation.clj  digest.clj  format.clj  glob.clj  harvest.clj  import.clj  infer.clj  ofx1.clj  pairing.clj  realize.clj  sort.clj  spec_support.clj  transient.clj  xf.clj
clj/src/lima/harvest/spec/: config.clj  txn.clj
clj/src/limabean/harvest/: api.clj  app.clj  main.clj  spec.clj
clj/src/limabean/harvest/adapter/: beanfile.clj  config.clj  exception.clj  logging.clj  prepare.clj  user_clj.clj
clj/src/limabean/harvest/api/contrib/: first_direct.clj  first_direct_csv.clj  kiwibank_ofx.clj  kiwibank_ofx1.clj
clj/src/limabean/harvest/core/: config.clj  correlation.clj  digest.clj  error.clj  format.clj  glob.clj  pairing.clj  realize.clj  sort.clj  spec_support.clj  transient.clj  xf.clj
clj/src/limabean/harvest/spec/: config.clj  txn.clj
clj/test/lima/core/: inventory_test.clj
clj/test/lima/harvest/core/: gen_txn.clj  inventory_test.clj  pairing_test.clj  txn_gen.clj
clj/test/limabean/harvest/: app_test.clj
clj/test/limabean/harvest/core/: correlation_test.clj  gen_txn.clj  pairing_test.clj
doc/: import.md
examples/: import-config.edn  kiwibank.ofc
examples/beancount/: balance.beancount  full.beancount  simple.beancount  tolerance.beancount  trading.beancount
examples/clj/: local.clj  user.clj
examples/import/ofx2/: simple-v2.ofx
examples/ofx2/: simple-v2.ofx
rust/: Cargo.toml
rust/beancount-lima/: Cargo.toml
rust/beancount-lima-booking/: Cargo.toml
rust/beancount-lima-booking/src/: book.rs  categorize.rs  errors.rs  features.rs  internal_types.rs  interpolate.rs  lib.rs  public_types.rs  reductions.rs  tests.rs
rust/beancount-lima-booking/src/features/: lima_parser_types.rs  rust_decimal.rs
rust/beancount-lima-booking/src/tests/: booking.rs  helpers.rs  positions.rs
rust/beancount-lima/src/: book.rs  digest.rs  format.rs  ingest.rs  main.rs  options.rs  plugins.rs
rust/beancount-lima/src/book/: types.rs  util.rs
rust/beancount-lima/src/book/types/: tests.rs
rust/beancount-lima/src/format/: beancount.rs  edn.rs
rust/beancount-lima/src/ingest/: csv.rs  ofx.rs
rust/beancount-lima/src/ingest/ofx/: ofx1.rs
rust/beancount-lima/src/options/: defaults.rs
rust/src/: digest.rs  edn.rs  hull.rs  ingest.rs  json.rs  main.rs  ofx1.rs  ofx2.rs
rust/src/ingest/: csv.rs
rust/src/ingest/ofx/: ofx1.rs
scripts.dev/: lima  lima-harvest  limabean-harvest
scripts.prod/: lima  lima-harvest  limabean-harvest
test-cases/: amex.beancount  amex.expected.beancount  example-ofx2.beancount  harvest.edn  import-config.edn  kiwibank.actual.beancount  pairing.expected.beancount
test-cases/amex/: amex.qfx
test-cases/first-direct/: 10-9999-0000001-01.csv  config.edn  expected.beancount
test-cases/first-direct-csv/: config.edn  context.beancount
test-cases/generic-ofx1/: expected.beancount  generic-v1.ofx
test-cases/generic-ofx2/: expected.beancount  generic-v2.ofx
test-cases/import/: firstdirect.actual.beancount  kiwibank.beancount  kiwibank.expected.beancount  pairing.beancount
test-cases/import/firstdirect/: 10-9999-0000001-02.csv
test-cases/import/pairing/: pairing-21.ofx
test-cases/kiwibank/: expected.beancount
test-cases/kiwibank-ofx/: config.edn  kiwibank.ofx
test-cases/kiwibank-ofx1/: config.edn
test-cases/pairing/: 07.ofx  expected.beancount
