[workspace]
resolver = "3"
members = ["beancount-lima", "beancount-lima-booking"]

[workspace.package]
version = "0.6.0" # keep in step with below

[workspace.dependencies]
beancount-lima-booking = { path = "./beancount-lima-booking", version = "0.6.0" } # keep in step with above
beancount-parser-lima = "0.14.1"
# beancount-parser-lima = { version = "0.14.1", path = "../beancount-parser-lima" }
hashbrown = "0.15.4"
rstest = "0.26.1"
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.2"
strum_macros = "0.27.2"
time = "0.3.41"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
