[package]
name = "limabean-harvest"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Beancount importer backend for limabean-harvest"
homepage = "https://github.com/tesujimath/limabean-harvest"
repository = "https://github.com/tesujimath/limabean-harvest"
readme = "../README.md"

[dependencies]
beancount-parser-lima = "0.14.1"
clap = { version = "4.5.42", features = ["derive"] }
color-eyre = "0.6.5"
csv = "1.3.1"
hashbrown = { version = "0.15.4", features = ["serde"] }
regex = "1.11.1"
rust_decimal = "1.37.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
sgmlish = "0.2.0"
slugify = "0.1.0"
strum = "0.27.2"
strum_macros = "0.27.2"
time = { version = "0.3.41", features = ["local-offset", "parsing"] }
