[package]
name = "beancount-lima-booking"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Beancount booking algorithms for Lima"
homepage = "https://github.com/tesujimath/beancount-lima"
repository = "https://github.com/tesujimath/beancount-lima"
readme = "../README.md"

[dependencies]
beancount-parser-lima = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
hashbrown = { workspace = true }
strum_macros = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
beancount-parser-lima = { workspace = true }
rstest = { workspace = true }
rust_decimal_macros = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["lima-parser-types", "rust-decimal"]
rust-decimal = ["dep:rust_decimal"]
lima-parser-types = ["dep:beancount-parser-lima", "dep:rust_decimal"]
