[package]
name = "beancount-lima"
version.workspace = true
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Beancount frontend using Lima parser"
homepage = "https://github.com/tesujimath/beancount-lima"
repository = "https://github.com/tesujimath/beancount-lima"
readme = "../README.md"

[[bin]]
name = "lima-pod"
path = "src/main.rs"

[dependencies]
beancount-lima-booking = { workspace = true, features = [
  "lima-parser-types",
  "rust-decimal",
] }
beancount-parser-lima = { workspace = true }
rust_decimal = { workspace = true }
hashbrown = { workspace = true }
time = { workspace = true, features = ["local-offset", "parsing"] }
clap = { version = "4.5.42", features = ["derive"] }
csv = "1.3.1"
slugify = "0.1.0"
sgmlish = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
regex = "1.11.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = "0.6.5"
strum = "0.27.2"
strum_macros = { workspace = true }
joinery = "3.1.0"
tabulator = { version = "0.5.0", features = [
  "bin",
  "num-bigint",
  "rust_decimal",
] }
# tabulator = { path = "../../../tabulator", features = [
#   "bin",
#   "num-bigint",
#   "rust_decimal",
# ] }

[dev-dependencies]
rstest = { workspace = true }
rust_decimal_macros = { workspace = true }
time = { version = "0.3.41", features = ["macros"] }

[build-dependencies]
build-deps = "0.1.4"
